Add dual licensing and GitHub Pages demo support

--- a/admin.html
+++ b/admin.html
@@ -5,6 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>K IMPERIA — Genesis Command Center</title>
   <link rel="stylesheet" href="admin.css" />
+  <script>
+    // Optional: configure when hosting on GitHub Pages (demo) without IPFS stamping.
+    // window.K_IMPERIA_FUNCTIONS_BASE = 'https://<PROJECT_REF>.supabase.co/functions/v1';
+  </script>
 </head>
 <body>
 
