--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>K IMPERIA — Genesis Allocation Registration</title>
   <link rel="stylesheet" href="styles.css" />
+  <script>
+    // Optional: configure when hosting on GitHub Pages (demo) without IPFS stamping.
+    // window.K_IMPERIA_FUNCTIONS_BASE = 'https://<PROJECT_REF>.supabase.co/functions/v1';
+  </script>
   <script src="https://cdn.jsdelivr.net/npm/qrcodejs@1.0.0/qrcode.min.js"></script>
 </head>
 <body>
